# NovelClaw

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  PROMPT.md  README.md  REVIEW_2026-06-15.md  STRUCTURE.md  TRANSLATION_GUIDE.md  TRANSLATION_MANUAL.md  _check.py  _index.md  batch_85_log.txt  batch_log.txt  batch_v2_log.txt  docker-compose.yml  fix_cjk.py  fix_cjk2.py  novelclaw.py  progress.md  pyproject.toml  roadmap-v2.md  run.bat  translation_notes.md  validation_config.json
.agents/types/: workflow.json
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROCESSES.md  SYSTEM_ARCHITECTURE.md  THAI_NATURALNESS.md  TRANSLATION_WORKFLOW_AUDIT.md  best-skills-ranking.md  rebuild-plan.md  recommended-skills.md  upgrade-plan.md
jobs/done/: translate-20260623-151736.json  translate-20260623-152635.json  translate-20260623-162816.json  translate-20260624-021841.json
novelclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
novels/fixture-test/: chapters.json  novel.json  search-index.th.json
novels/global-descent/: .translation_state.json  chapters.json  characters.md  dynamic_bans.md  format_spec.json  format_spec.md  glossary.md  meta.json  meta.md  novel.json  progress.md  reviews.json  search-index.th.json  style.md  style_rules.yml  summary.md
novels/test-style/: style_rules.json  style_rules.yml
reader/: local_state.json  package.json  security-audit-report.md  server.js  users.json
reader/config/: brackets.json
reader/lib/: blocks.js  brackets.js  chapter-repo.js  helpers.js  novel-repo.js  paths.js  render.js  search-service.js  test-renderer.js
reader/locales/: en.json  th.json
reports/: README.md
scripts/: setup-venv.bat  setup-venv.sh
templates/: universal_prompt.json  universal_prompt.md
tests/: conftest.py  test_agent_coordinator.py  test_anti_ai.py  test_audit.py  test_build_yaml.py  test_chapter_io.py  test_chapter_search.py  test_cn_checker.py  test_constants.py  test_cumulative_glossary.py  test_edge_cases.py  test_extract_entities.py  test_find_candidates.py  test_frontend.py  test_glossary.py  test_glossary_discovery.py  test_glossary_gate.py  test_learn_slop.py  test_multilang_schema.py  test_normalize_chapter_schema.py  test_npc_bank.py  test_paragraph_metrics.py  test_pipeline_cleaning.py  test_pipeline_llm_config.py  test_pipeline_parsing.py  test_pre_chapter.py  test_progress.py  test_provider_config.py  test_quality_gate.py  test_quality_report.py  test_quality_scorer.py  test_registry.py  test_schema.py  test_server.js  test_text_stats.py  test_translate.py  test_translate_commit.py  test_translate_profile.py  test_translate_resume.py  test_translation_memory.py  (+4 more)
tmp/: fix_ch122.py  write_ch123.py
tools/: __init__.py  _build_all_cn.py  _tmp_fix_check.py  agent_coordinator.py  audit.py  backup.py  batch_validate.py  build_glossary.py  build_yaml.py  chapter_diff.py  chapter_io.py  chapter_search.py  check_all.py  classifier.py  clean_leaks.py  clean_source.py  cli.py  cn_checker.py  compare_chapters.py  consistency_checker.py  constants.py  contracts.py  convert_quotes.py  cumulative_glossary.py  dashboard.py  extract_entities.py  find_candidates.py  fix_chapter.py  glossary.py  glossary_audit.py  glossary_discovery.py  glossary_doctor.py  glossary_gate.py  glossary_index.py  glossary_pre.py  glossary_stats.py  hybrid_scrape.py  import_epub.py  learn_slop.py  learn_slop.py.bak  (+48 more)
(+2008 files in other folders)
