[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novelclaw"
version = "1.0.0"
description = "Cross-language web novel translation toolkit — transmittor-pipeline with validation, glossary management, and reader UI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "P Choke & Mika"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
novelclaw = "tools.glossary:main"

[project.urls]
Homepage = "https://github.com/BlankScreen/novelclaw"
Documentation = "https://github.com/BlankScreen/novelclaw"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.setuptools.package-data]
tools = ["sites/*.json", "slop/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
