[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novelclaw"
version = "1.0.0"
description = "Cross-language web novel translation toolkit — transmittor-pipeline with validation, glossary management, and reader UI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "P Choke & Mika"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
novelclaw = "tools.cli:main"
novelclaw-translate = "tools.translate:main"
novelclaw-validate = "tools.validate_chapter:main"
novelclaw-glossary = "tools.glossary:main"
novelclaw-search = "tools.chapter_search:main"

[project.urls]
Homepage = "https://github.com/BlankScreen/novelclaw"
Documentation = "https://github.com/BlankScreen/novelclaw"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.setuptools.package-data]
tools = ["sites/*.json", "slop/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "PD", "PL"]
ignore = ["E501", "B904", "PLR2004", "PLR0913", "PLR0915", "PLR0912", "PLR0911"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
warn_unused_configs = true

[tool.coverage.run]
source = ["tools"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 60

